Add table page and quick navigation

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <header>
     <h1>Logical Fallacies</h1>
     <p>An Encyclopedia of Errors in Reasoning</p>
+    <nav class="quick-nav">
+      <a href="index.html">Home</a>
+      <a href="tables.html">Tables</a>
+    </nav>
     <img src="/fallacies-fun-logo.png" alt="Logical Fallacies banner" class="banner">
   </header>
 
